<?xml version="1.0" encoding="utf-8"?>
<!--Shaminda_Abeysekara_301056885_002-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShamindaActivity"
    android:background="#add8e6">

    <EditText
        android:id="@+id/shamindaUsername"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="266dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/shamindaPassword"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="210dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="number"/>

    <TextView
        android:id="@+id/ShamindaTextView1"
        android:layout_width="402dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="538dp"
        android:gravity="center"
        android:text="@string/shaminda_abeysekara_301056885"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/shamindaImageView1"
        android:layout_width="181dp"
        android:layout_height="172dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="115dp"
        android:src="@drawable/tomato"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/shamindaSighIn"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="102dp"
        android:text="@string/shaminda_sign_in"
        android:onClick = "login"/>
</RelativeLayout>